[package]
name = "steam-user-api"
version = "0.2.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/pieckenst/steam-user-rs"
description = "REST API proxy for steam-user crate using Axum"

[dependencies]
steam-user = "0.2.1"
steam-auth = { package = "steam-auth-rs", version = "0.1.0" }
steam-enums = "0.1.0"
steamid = { package = "steamid-rs", version = "2.1.0" }
steam-totp = { package = "steam-totp-rs", version = "0.1.0" }
steam-protos = { version = "0.1.0", features = ["serde"] }
hex = "0.4.3"
dashmap = "6"
uuid = { version = "1", features = ["v7"] }

axum = { version = "0.8", features = ["macros"] }
thiserror = "1.0"
tokio = { version = "1.48.0", features = ["full", "tracing"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt", "registry", "std"] }

[lints.rust]
unsafe_code = "warn"
unreachable_pub = "warn"
deprecated = "deny"

[lints.clippy]
# Correctness: deny anything likely to be a bug
correctness = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }
# Style/complexity: warn
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
# Specific high-value lints
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"
wildcard_enum_match_arm = "warn"
# Allow some pedantic noise that conflicts with this codebase
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
opt-level = 3
debug = false

[profile.release-debug]
inherits = "release"
strip = "none"
debug = "limited"
